--- a/src/components/background_style.css
+++ b/src/components/background_style.css
@@ -1,7 +1,7 @@
 
-  /* body {
+  body {
     background-color: bisque;
-  } */
-.background{
-  background-color: bisque;
-}
+  }
+/* .background{
+   background-color: bisque;
+} */
